[REFACTOR] 카테고리 전체 조회 리팩토링